2013-07-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/agents.php, mobile/operation/agent.php,
	include/functions_graph.php: fixed the show static graphs in
	mobile.

2013-07-10  Ramon Novoa  <rnovoa@artica.es>

	* extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql,
	  godmode/snmpconsole/snmp_alert.php,
	  pandoradb.sql,
	  pandoradb.postgreSQL.sql,
	  pandoradb.oracle.sql,
	  operation/snmpconsole/snmp_view.php: Added support to filter 10
	  binding vars. Added binding var automatic translation and other
	  small improvements.

2013-07-10 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/agents.php: fixed lost semicolon.

2013-07-10 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/modules/manage_network_components.php: improved the source
	code style.
	
	* include/functions_modules.php: added lost function
	"modules_get_type_id".

2013-07-09  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php: Fix the alerts status pie graph
	to make it more usefull

	* godmode/agentes/agent_wizard.snmp_interfaces_explorer.php: Comment
	code

2013-07-09  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	images/wand_agent.png
	images/wand_snmp.png
	images/wand_wmi.png
	images/wand_interfaces.png
	godmode/agentes/agent_wizard.php
	godmode/agentes/configurar_agente.php: Add new subtab to
	agent wizard

2013-07-08  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/pandora_modules.js
	include/functions_wmi.php
	extensions/snmp_explorer.php
	godmode/agentes/agent_wizard.wmi_explorer.php
	godmode/agentes/agent_wizard.snmp_interfaces_explorer.php
	godmode/agentes/agent_wizard.php
	godmode/agentes/configurar_agente.php: Replace the SNMP explorer by 
	the Agent wizard with two initial sections. SNMP interfaces explorer
	and WMI explorer

2013-07-08 Miguel de Dios <miguel.dedios@artica.es>
	